Fixed misaligned color

--- a/styles.css
+++ b/styles.css
@@ -264,7 +264,7 @@ color: #ff6b6b;
 
     /* Colors Room Buttons */
 .room-1 .cta-button,
-.room-3 .cta-button,
+.room-2 .cta-button,
 .room-3 .cta-button {
   background-color: #e8d3bd;
 }
